feat: scaffold database and add first clients read endpoint

--- a/src/BrokerSystem.Api/appsettings.json
+++ b/src/BrokerSystem.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "BrokerDb" : "Host=localhost;Port=5432;Database=BrokerSystemDb;Username=postgres;Password=postgres"
+  },
   "AllowedHosts": "*"
 }
